--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,138 @@
+*{
+        font-family: 'prem-normal';
+    }
+@font-face {  
+    src: url('prem-font/Nootype\ -\ Radikal.otf') format("truetype");
+    font-family: prem-normal;
+}
+@font-face {  
+    src: url('prem-font/Nootype\ -\ Radikal\ Black.otf') format("truetype");
+    font-family: prem-black;
+}
+@font-face {  
+    src: url('prem-font/Nootype\ -\ Radikal\ Bold.otf') format("truetype");
+    font-family: prem-bold;
+}
+@font-face {  
+    src: url('prem-font/Nootype\ -\ Radikal\ Light.otf') format("truetype");
+    font-family: prem-light;
+}
+@font-face {  
+    src: url('prem-font/Nootype\ -\ Radikal\ Medium.otf') format("truetype");
+    font-family: prem-medium;
+}
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: #fff;
-    color: #37003c;
+    background-color: #1e0021;
     min-height: 100vh;
     line-height: 1.6;
 }
-
+ 
 .navbar {
-    background: #37003c;
-    padding: 0.8rem 2rem;
+    background: #28002b;
+    padding: 0 0;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: row;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     position: sticky;
     top: 0;
     z-index: 100;
+    overflow: hidden;
 }
 
 .nav-logo .logo {
-    height: 55px;
+    height: 80px;
+    background: local;
+    background-color: #ffffff;
+    padding: 1rem 2rem 1rem 1.5rem;
+    border-bottom-right-radius: 50%;
+    border-top-right-radius: 50%;
+    z-index: 100;
 }
-
+.nav-logo .logo{
+    transform: scale(1.35);
+}
+.nav-obj{
+    display: flex;
+    flex-direction: column;
+}
+.teams{
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    margin: 0;
+    padding-left: 6.5rem;
+    background-color: #ffffff;
+    list-style: none;
+    width: 79rem;
+    left: -3.25rem;
+    position: relative;
+}
+.teams li img{
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    padding: 0.3rem 0;
+}
+.team-img:hover{
+    transform: scale(1.05);
+}
 .nav-items {
     list-style: none;
-    margin: 0;
+    margin:1.20rem 0;
     padding: 0;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    margin-left: 3.25rem;
 }
 
 .nav-items li {
-    margin-left: 1.5rem;
+    
 }
 
 .nav-link {
     color: #fff;
     text-decoration: none;
-    font-size: 1.1rem;
-    font-weight: 500;
-    padding: 0.6rem 1.3rem;
-    border-radius: 8px;
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+    font-family: 'prem-medium';
+    padding: 0.8rem 1.25rem;
+    border-radius: 25px;
     transition: background 0.3s ease, transform 0.2s ease;
 }
 
 .nav-link:hover {
-    background: #5b0a63;
-    transform: scale(1.05);
+    background: #37003c;
 }
-
-.nav-link.active {
-    background: #5b0a63;
-    font-weight: 700;
+.plc{
+    display: flex;
+    align-items: center; 
+    top: -0.1rem;
+    position: relative;
+}
+.plc a{
+    display: flex;
+    align-items: center;
+    padding: 0 1.25rem 0 0 ;
+}
+.pl{
+    height: 2rem;
 }
 .nav-logo{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .navtitle{
     color: #ffffff;
     font-size: 1.5rem;
     margin-left: 1rem;
 }
-
 main {
-    max-width: 1000px;
-    margin: 2.5rem auto;
+    margin: 2.5rem 2rem;
     padding: 0 1rem;
 }
 
@@ -83,14 +148,17 @@ main {
 }
 
 h2 {
-    font-size: 2.3rem;
+    font-size: 2.4rem;
     font-weight: 700;
-    color: #37003c;
-    margin-bottom: 1.8rem;
-    text-align: center;
-    border-bottom: 4px solid #37003c;
-    padding-bottom: 0.7rem;
+    color: #fff;
+    margin-bottom: 1.5rem;
+    text-align: left;
+    font-family: 'prem-bold';
+    padding: 0.65rem;
+    padding-left: 1.5rem;
+    border-radius: 20px;
     letter-spacing: 0.03em;
+    background:  linear-gradient(90deg,#953bff, #05f0ff);;
 }
 
 .error {
@@ -104,18 +172,28 @@ h2 {
 .matches {
     display: flex;
     flex-direction: column;
-    gap: 1.8rem;
+    gap: 3rem;
 }
-
-.date-group {
+.week-group{
     margin-bottom: 1.2rem;
 }
+.date-group {
+    margin-bottom: 1.35rem;
+}
+.week-group .date-group:first-child {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
 
-.date-header {
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #37003c;
-    padding: 0.7rem 1rem;
+.week-group .date-group:last-child {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+.MW-header{
+    font-size: 1.75rem;
+    font-family: 'prem-bold';
+    color: #fff;
+    padding: 0.75rem 1rem 0;
     text-transform: uppercase;
     letter-spacing: 0.06em;
     text-align: center;
@@ -123,28 +201,62 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+.MW-games {
+    background: #28002b; 
+    border-radius: 20px;
+    overflow: hidden;
+}
+.date-header {
+    font-size: 1rem;
+    font-family: 'prem-bold';
+    color: #fff;
+    padding: 1rem 1rem 1.75rem;
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.date-group .match-card:not(:last-child) {
+    position: relative;
+}
 
+.date-group .match-card:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+    width: 70%;
+    height: 1px;
+    background-color: #541e5d;
+}
+
+.date-group .match-card:first-child:last-child::after {
+    display: none;
+}
 .match-card {
     display: flex;
     align-items: center;
     justify-content:space-between;
-    background: #fafafa;
-    padding-top: 0.9rem;
-    padding-bottom: 0.9rem;
-    border-bottom: 1px solid #37003c;
+    padding: 0.5rem 0;
+    border-width: 80%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    transition: background 0.3s ease;
     position: relative;
     min-height: 60px;
 }
+.match-card:last-child{
+    border-bottom: none;
+}
 
 .match-card:hover {
-    background: linear-gradient(90deg, #00ff87, #05f0ff);
+    background: #37003c;
 }
 
 .team {
     display: flex;
     align-items: center;
+    font-family: 'prem-bold';
     font-size: 1.1rem;
     font-weight: 500;
     width: 40%;
@@ -155,14 +267,15 @@ h2 {
 }
 
 .team img {
-    width: 42px;
-    height: 42px;
+    width: 38px;
+    height: 38px;
     object-fit: contain;
     margin: 0 0.9rem;
 }
 
 .team-name {
-    color: #37003c;
+    color: #fff;
+    font-family: 'prem-medium';
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -170,9 +283,10 @@ h2 {
 
 .score, .time {
     font-size: 1.5rem;
-    font-weight: 700;
-    color: #37003c;
-    border: 2px solid #37003c;
+    font-family: 'prem-medium';
+    letter-spacing: 0.03em;
+    color: #fff;
+    border: 2px solid #fff;
     border-radius: 6px;
     padding: 0.4rem 0.8rem;
     position: absolute;
@@ -191,56 +305,78 @@ h2 {
 
 
 .table-container {
-    overflow-x: auto;
     margin-top: 1.2rem;
+    margin-bottom: 2rem;
+    width:100%;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    background: #fafafa;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    background: #28002b;
+    border-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-bottom: 1.5rem;
 }
 
 th, td {
-    padding: 1rem 1.2rem;
-    text-align: left;
-    border-bottom: 1px solid #e5e7eb;
-    font-size: 0.95rem;
+    padding: 0.85rem 1.2rem;
+    font-size: 1rem;
     text-align: center;
 }
 
+
 .tdname {
     text-align: left;
+    font-family: 'prem-bold';
 }
 
 th {
     font-weight: 700;
     letter-spacing: 0.07em;
-    background-color: rgb(251, 250, 250);
-    font-size: 0.85rem;
-    color: rgb(135, 102, 138);
+    font-size: 1rem;
+    color: #af99b1;
+    font-family: 'prem-light';
 }
 
 td {
-    color: #37003c;
+    color: #ffffff;
     font-weight: 500;
 }
 
 td img {
-    width: 32px;
-    height: 32px;
+    width: 36px;
+    height: 36px;
     vertical-align: middle;
     margin-right: 0.7rem;
 }
-
-tbody tr:nth-child(even) {
-    background: #f5f5f5;
+.posH{
+    padding: 0.85rem 0.25rem 0.85rem 1rem;
+    font-size: 0.95rem;
+    text-align: center;
+    width: 5rem;
 }
-
+.position{
+    padding: 0.85rem 0.25rem 0.85rem 1rem;
+    font-size: 1.1rem;
+    font-weight: 900;
+    width: 5rem;
+}
+.ptsH{
+    padding: 0.85rem 1.2rem;
+    font-size: 1.15rem;
+    font-weight: 900;
+    width: 5rem;
+}
+.points{
+    padding: 0.85rem 1.2rem;
+    font-size: 1.15rem;
+    font-weight: 900;
+    width: 5rem;
+}
 tbody tr:hover {
-    background: linear-gradient(90deg, #00ff87, #05f0ff);
+    background: #37003c;
 }
 
 tbody tr.top-6 {
@@ -260,20 +396,78 @@ tbody tr.bottom-3 {
 }
 
 footer {
-    background: #37003c;
     color: #fff;
     text-align: center;
-    padding: 0.5rem 1.75rem;
     margin-top: 2.5rem;
-    font-size: 0.95rem;
-    font-weight: 500;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    }
-    .foot-logo .logo{
-        height: 35px;
-    }
+    overflow: hidden;
+}
+.footnav{
+    background: #28002b;
+    width: 92%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:1rem;
+    padding: 0.25rem 1rem;
+}
+.f1,.f2,.f3{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    gap: 0.25rem;
+}
+.f1{
+
+}
+.f2{
+    border-left: #541e5d 2px solid;
+    border-right: #541e5d 2px solid;
+    padding:0 1rem
+}
+.f3{
+
+}
+.footnav li{
+    list-style: none;
+    text-align: left;
+    width: 23.4rem;
+    padding: 0.75rem 1rem;
+    margin: 0 ;
+    letter-spacing: 0.03em;
+    font-family: 'prem-medium';
+    font-size: 1.25rem;
+    border-radius: 15px;
+}
+.footnav a{
+    text-decoration: none;
+    color: #fff;
+}
+.footnav li:hover{
+    background: #37003c;
+}
+.foot{
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+}
+.foot p{
+    font-size: 0.65rem;
+    font-family: 'prem-bold';
+    align-self: self-end;
+}
+.foot-logo .logo{
+    height: 35px;
+    position: relative;
+    top:0.3rem;
+}
 
 @media (max-width: 768px) {
     .navbar {
